src/objects/PlusMCampaigns__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PlusMCampaigns</relationshipLabel>
        <relationshipName>PlusMCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db id field</inlineHelpText>
        <label>Record ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>brand_id__c</fullName>
        <label>brand_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>consider_donation_creation_on_marqeta_ca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Donation Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redemption_info__c</fullName>
        <label>Redemption Info</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>PlusMCampaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PlusMCampaigns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlusMCampaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>